unpackaged/main/default/objects/Opportunity/fields/FFX_Processed__c.field-meta.xml
<CustomField>
    <fullName>FFX_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>