unpackaged/main/default/objects/Opportunity/fields/pse__Forecast_Curve__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Curve__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Curve</label>
    <referenceTo>pse__Forecast_Curve__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>