unpackaged/main/default/objects/Opportunity/fields/pse__Is_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Change_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Change Request</label>
    <type>Checkbox</type>
</CustomField>