unpackaged/main/default/objects/Opportunity/fields/pse__Pre_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Pre_Billed_Amount__c</fullName>
    <description>This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</description>
    <inlineHelpText>This field is a replacement for the old Pre-Billed Amount field (PreBilledAmount__c) which did not allow non-integer decimals.</inlineHelpText>
    <label>Pre-Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>