unpackaged/main/default/objects/Opportunity/fields/pse__Rate_Card_Discount_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Rate_Card_Discount_Limit__c</fullName>
    <description>The rate card's minimum suggested bill rate to which the discount will be applied.</description>
    <inlineHelpText>The rate card's minimum suggested bill rate to which the discount will be applied.</inlineHelpText>
    <label>Rate Card Discount Limit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>