unpackaged/main/default/objects/Opportunity/fields/pse__Services_Attached_From_Products__c.field-meta.xml
<CustomField>
    <fullName>pse__Services_Attached_From_Products__c</fullName>
    <label>Services Attached From Products</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.pse__IsServicesProductLine__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>