unpackaged/main/default/objects/Opportunity/fields/pse__Test_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Test_Project_End_Date__c</fullName>
    <label>TEST ONLY Project End Date</label>
    <type>Date</type>
</CustomField>