unpackaged/main/default/objects/Opportunity/fields/pse__Test_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Test_Project_Start_Date__c</fullName>
    <label>TEST ONLY Project Start Date</label>
    <type>Date</type>
</CustomField>