unpackaged/main/default/objects/Opportunity/validationRules/pse__Discount_Rates_Must_Be_Between_0_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Discount_Rates_Must_Be_Between_0_to_100</fullName>
    <active>false</active>
    <description>The Rate Card Percentage Discount must be between 0 and 100.</description>
    <errorConditionFormula>pse__Rate_Card_Percentage_Discount__c &lt; 0 || pse__Rate_Card_Percentage_Discount__c &gt; 100</errorConditionFormula>
    <errorMessage>The Rate Card Percentage Discount must be between 0 and 100.</errorMessage>
</ValidationRule>